# esp32cam

./: .gitignore  localserver.py  monitor.html
main/: CMakeLists.txt  api.c  camera.c  config.c  main.c  monitor.c  stream.c  tools.c
main/include/: api.h  camera.h  config.h  general.h  main.h  monitor.h  stream.h  tools.h
